SERVER-30362 MozJS - implement resolve instead of getProperty for native types